tests/errors/arguments/constants/int_invalid_02.src
.IPPcode18
move GF@var inT@4